# tasky-app

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  example.env  pyproject.toml
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: start_prod.sh
backend/tasks_app/: admin.py  models.py  routers.py  serializers.py  urls.py  views.py
backend/tasks_app/migrations/: 0001_initial.py  0002_alter_task_creation_date_alter_task_end_date_and_more.py  0003_alter_task_creation_date_alter_task_end_date.py  0004_alter_task_creation_date_alter_task_end_date.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: ElementContainer.vue  TaskCreateForm.vue  TaskElement.vue  TaskList.vue  TaskPreview.vue  TaskUpdateForm.vue
nginx/: nginx.conf
